# Image_processor

./: CMakeLists.txt  README.md  image_processor.cpp
modules/FilterManager/: FilterManager.cpp  FilterManager.h
modules/Filters/: Crop.cpp  Crop.h  EdgeDetection.cpp  EdgeDetection.h  Filter.h  GaussianBlur.cpp  GaussianBlur.h  Grayscale.cpp  Grayscale.h  MatrixFilter.cpp  MatrixFilter.h  MyFilter.cpp  MyFilter.h  Negative.cpp  Negative.h  Sharpening.cpp  Sharpening.h
modules/Image/: Image.cpp  Image.h  PixelRGB.cpp  PixelRGB.h
